# seabird-discord-backend

./: .gitignore  Dockerfile  README.md  backend.go  discord.go  entrypoint.sh  flake.nix  go.mod  go.sum  grpc.go  messages.go  messages_test.go
cmd/seabird-discord-backend/: main.go
seabird-discord-backend/: Cargo.toml
seabird-discord-backend/src/: client.rs  main.rs
